// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentAnalysis the ContentAnalysis component with disabled buttons matches the snapshot 1`] = `
.ipJrfs .c0 {
  padding: 8px 0;
  color: #0066cd;
}

<div
  className="jVJKfA"
>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="dZPkEn"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up iJBKzu"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Errors (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR fieIyu"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="jVGURW"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up clRmWD"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Problems (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR dVsSXu"
          fill="#dc3232"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Marks are disabled in current view"
          aria-pressed={false}
          className="dBOyWd"
          disabled={true}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye khkzjZ"
            fill="#ddd"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="lfpnLr"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up cwraiO"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Improvements (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR cjXzdC"
          fill="#ee7c1b"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="bkBHRu"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up eVpKDI"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Considerations (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR iwCNuw"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="fcMtAu"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up iiIzV"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Good results (2)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR fzvemV"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR DEXRH"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Marks are disabled in current view"
          aria-pressed={false}
          className="dBOyWd"
          disabled={true}
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye lmLdcE"
            fill="#ddd"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ContentAnalysis the ContentAnalysis component with hidden buttons matches the snapshot 1`] = `
.ipJrfs .c0 {
  padding: 8px 0;
  color: #0066cd;
}

<div
  className="jVJKfA"
>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="khEJIU"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up dwTAPe"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Errors (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR dTuYDH"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="gOKmGy"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up keKDBQ"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Problems (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR ihSkzT"
          fill="#dc3232"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="euRdEK"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up CVLCe"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Improvements (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR kCdlfv"
          fill="#ee7c1b"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="fruDXf"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up iqJpge"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Considerations (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR bUYFYT"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="cVMgNP"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up dhiMSv"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Good results (2)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR hNpsbP"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR dttaQx"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`ContentAnalysis the ContentAnalysis component with specified header level matches the snapshot 1`] = `
.ipJrfs .c0 {
  padding: 8px 0;
  color: #0066cd;
}

<div
  className="jVJKfA"
>
  <div
    className="ipJrfs wotQh"
  >
    <h3
      className="dZgZAz"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up eCCANl"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Errors (1)
          </span>
        </span>
      </button>
    </h3>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR iDDvDV"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h3
      className="rrUrw"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up gyhnhh"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Problems (1)
          </span>
        </span>
      </button>
    </h3>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR kUXmTB"
          fill="#dc3232"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="dBOyWd"
          disabled={false}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye lkIljk"
            fill="#555"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h3
      className="fGtBxk"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up gnOgPp"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Improvements (1)
          </span>
        </span>
      </button>
    </h3>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR cUtDkD"
          fill="#ee7c1b"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h3
      className="cfDxiT"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up iDLLje"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Considerations (1)
          </span>
        </span>
      </button>
    </h3>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR cRnBbA"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h3
      className="kSLLTE"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up kxzrhg"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Good results (2)
          </span>
        </span>
      </button>
    </h3>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR cuGUyk"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR kbDfVL"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="dBOyWd"
          disabled={false}
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye fJgHoM"
            fill="#555"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ContentAnalysis the ContentAnalysis component without language notice matches the snapshot 1`] = `
.ipJrfs .c0 {
  padding: 8px 0;
  color: #0066cd;
}

<div
  className="jVJKfA"
>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="fwheFY"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up eBiXoO"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Errors (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR dlHgWG"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="bYhPLo"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up dKMOb"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Problems (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR gAIBBr"
          fill="#dc3232"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="dBOyWd"
          disabled={false}
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye kRAnoE"
            fill="#555"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="fOxwiB"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up eaoqzx"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Improvements (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR jInLna"
          fill="#ee7c1b"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="ItvEw"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up gBHlBb"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Considerations (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR dsCOhc"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="jKyWsT"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up dDomS"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Good results (2)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR iOovDK"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR gEbQxR"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="dBOyWd"
          disabled={false}
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye fPhTSN"
            fill="#555"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ContentAnalysis the ContentAnalysis component without problems and considerations, but with improvements and good matches the snapshot 1`] = `
.ipJrfs .c0 {
  padding: 8px 0;
  color: #0066cd;
}

<div
  className="jVJKfA"
>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="jtiEUn"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up eyYouD"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Errors (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR liATBF"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="jebjxo"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up eXhpAM"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Improvements (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR encUwW"
          fill="#ee7c1b"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="dXEnEo"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up gPnakS"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Good results (2)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR hXYGSG"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR fWujDW"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="dBOyWd"
          disabled={false}
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye cYjDFY"
            fill="#555"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ContentAnalysis the ContentAnalysis component without problems and improvements matches the snapshot 1`] = `
.ipJrfs .c0 {
  padding: 8px 0;
  color: #0066cd;
}

<div
  className="jVJKfA"
>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="fXgVIm"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up bJhEej"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Errors (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR bLAhHz"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="ghjYQH"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up cGplFn"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Considerations (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR lgUkMo"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="hoOVlQ"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up fFEvWC"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Good results (2)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR cHEiga"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR fuynaQ"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="dBOyWd"
          disabled={false}
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye eHtiad"
            fill="#555"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ContentAnalysis the ContentAnalysis component without problems matches the snapshot 1`] = `
.ipJrfs .c0 {
  padding: 8px 0;
  color: #0066cd;
}

<div
  className="jVJKfA"
>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="eGNIZg"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up fDmmNi"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Errors (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR aKtCa"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="hUijfd"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up xaRGu"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Improvements (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR iInHiZ"
          fill="#ee7c1b"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="gPyScq"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up uUEFx"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Considerations (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR kUDSdl"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="dlplIS"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up kdlDLV"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Good results (2)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR llDTNo"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR kQDiFU"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="dBOyWd"
          disabled={false}
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye hZpwhQ"
            fill="#555"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ContentAnalysis the ContentAnalysis component without problems, improvements and considerations matches the snapshot 1`] = `
.ipJrfs .c0 {
  padding: 8px 0;
  color: #0066cd;
}

<div
  className="jVJKfA"
>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="eevbkk"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up fEHetw"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Errors (1)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR kgSmEC"
          fill="#888"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="ipJrfs wotQh"
  >
    <h4
      className="gOhzru"
    >
      <button
        aria-expanded={true}
        className="c0 eIXCSJ SzEOQ"
        id={null}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-angle-up gIzHkc"
          fill="#555"
          focusable="false"
          role="img"
          size="18px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1395 1184q0 13-10 23l-50 50q-10 10-23 10t-23-10l-393-393-393 393q-10 10-23 10t-23-10l-50-50q-10-10-10-23t10-23l466-466q10-10 23-10t23 10l466 466q10 10 10 23z"
          />
        </svg>
        <span
          className="eASGlU"
        >
          <span
            className="OtiDr"
          >
            Good results (2)
          </span>
        </span>
      </button>
    </h4>
    <ul
      className="kMvZyH"
      role="list"
    >
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR ccUeTQ"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="bBVUdq"
        onButtonClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="yoast-svg-icon yoast-svg-icon-circle eoONFR kuhncR"
          fill="#7ad03a"
          focusable="false"
          role="img"
          size="13px"
          viewBox="0 0 1792 1792"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
          />
        </svg>
        <p
          className="idLQSh"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="dBOyWd"
          disabled={false}
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="yoast-svg-icon yoast-svg-icon-eye fYfkhS"
            fill="#555"
            focusable="false"
            role="img"
            size="18px"
            viewBox="0 0 1792 1792"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
